complete/k8s_deployment/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-one
  labels:
    name: test-one

---
apiVersion: v1
kind: Namespace
metadata:
  name: rest-apis
  labels:
    name: rest-apis
